# Bellman-triangle-scanner

./: .gitignore  Cargo.toml  README.md  main (2).rs  main.rs  main_correct.rs  main_final.rs  main_fixed.rs  main_hybrid.rs
scr/: frontend.rs
src/: frontend.rs  main.rs
static/: index.html
