[package]
name = "arbitrage-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-cors = "0.6"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
chrono = "0.4"
petgraph = "0.6"
reqwest = { version = "0.11", features = ["json"], default-features = false, features = ["rustls-tls"] }
env_logger = "0.11"
log = "0.4"

# Override rustls to a compatible version
rustls = "0.21"
webpki-roots = "0.25"

# Explicitly exclude native-tls
[patch.crates-io]
native-tls = { version = "0.2", optional = true }
