[package]
name = "arbitrage-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
chrono = "0.4"
petgraph = "0.6"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
env_logger = "0.10"
log = "0.4"

[patch.crates-io]
native-tls = { version = "=0.2.16" }
