[package]
name = "arbitrage-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.19"  # Older version that definitely works
futures-util = "0.3"
chrono = "0.4"
petgraph = "0.6"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.10"
log = "0.4"

# Force older versions of TLS crates that work
native-tls = "0.2.16"  # Pin to version BEFORE the bug
